Added a rotation test, prepatory to adding transformations to `Stencil`